--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-06-phonebook-pysarenko",
+  "name": "goit-react-hw-07-phonebook-pysarenko",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yuliiapysarenko.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://yuliiapysarenko.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
@@ -11,6 +11,8 @@
     "nanoid": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.2.0",
+    "react-loader-spinner": "^6.0.0-0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
